objects/ProductPerformance__c.object
<CustomObject>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AsOfDatetime__c</fullName>
        <label>As of Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AsofYear__c</fullName>
        <formula>TEXT(YEAR(AsOfDate__c))</formula>
        <label>As of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Audit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuditMessage__c</fullName>
        <defaultValue>'Not Audited'</defaultValue>
        <label>Audit Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <formula>Product__r.CUSIP__c</formula>
        <label>CUSIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapitalGainsFactorLongTerm__c</fullName>
        <label>Capital Gains Factor (Long Term)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CapitalGainsFactorShortTerm__c</fullName>
        <label>Capital Gains Factor (Short Term)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DistributionYield__c</fullName>
        <label>Distribution Yield</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DividendFactor__c</fullName>
        <label>Dividend Factor</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EffectiveDuration__c</fullName>
        <label>EffectiveDuration</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HasBenchmark__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Benchmark?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasDailyReturns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this record has been loaded with daily returns.  Set by integration.</description>
        <label>Has Daily Returns?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasMorningstar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record has been affected by the Mornignstar API.</description>
        <label>Has Morningstar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasRates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Rates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasYields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Yields?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InceptionDate__c</fullName>
        <formula>Product__r.InceptionDate__c</formula>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAsofDateBusinessDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMonthEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month End?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuarterEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarter End?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsYearEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year End?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalName__c</fullName>
        <formula>Product__r.LegalName__c</formula>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSC10YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC10Year__c</formula>
        <label>MSC 10 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC10YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC10Year__c</formula>
        <label>MSC 10 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC10YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC10Year__c</formula>
        <label>MSC 10 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC10Year__c</fullName>
        <label>MSC 10 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1DayMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC1Day__c</formula>
        <label>MSC 1 Day Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1DayQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC1Day__c</formula>
        <label>MSC 1 Day Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1DayYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC1Day__c</formula>
        <label>MSC 1 Day Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1Day__c</fullName>
        <label>MSC 1 Day</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1MonthMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC1Month__c</formula>
        <label>MSC 1 Month Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1MonthQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC1Month__c</formula>
        <label>MSC 1 Month Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1MonthYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC1Month__c</formula>
        <label>MSC 1 Month Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1Month__c</fullName>
        <label>MSC 1 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC1Year__c</formula>
        <label>MSC 1 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC1Year__c</formula>
        <label>MSC 1 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC1Year__c</formula>
        <label>MSC 1 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC1Year__c</fullName>
        <label>MSC 1 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3MonthMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC3Month__c</formula>
        <label>MSC 3 Month Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3MonthQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC3Month__c</formula>
        <label>MSC 3 Month Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3MonthYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC3Month__c</formula>
        <label>MSC 3 Month Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3Month__c</fullName>
        <label>MSC 3 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC3Year__c</formula>
        <label>MSC 3 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC3Year__c</formula>
        <label>MSC 3 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC3Year__c</formula>
        <label>MSC 3 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC3Year__c</fullName>
        <label>MSC 3 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCChange__c</fullName>
        <formula>MSC__c -  PriorProductPerformance__r.MSC__c</formula>
        <label>MSC Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSCInceptionAnnualizedMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCInceptionAnnualized__c</formula>
        <label>MSC Inception Annualized Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionAnnualizedQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCInceptionAnnualized__c</formula>
        <label>MSC Inception Annualized Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionAnnualizedYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCInceptionAnnualized__c</formula>
        <label>MSC Inception Annualized Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionAnnualized__c</fullName>
        <label>MSC Inception Annualized</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionCumulativeMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCInceptionCumulative__c</formula>
        <label>MSC Inception Cumulative Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionCumulativeQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCInceptionCumulative__c</formula>
        <label>MSC Inception Cumulative Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionCumulativeYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCInceptionCumulative__c</formula>
        <label>MSC Inception Cumulative Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionCumulative__c</fullName>
        <label>MSC Inception Cumulative</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCInception__c</formula>
        <label>MSC Inception Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCInception__c</formula>
        <label>MSC Inception Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInceptionYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCInception__c</formula>
        <label>MSC Inception Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCInception__c</fullName>
        <label>MSC Inception</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCMTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCMTD__c</formula>
        <label>MSC MTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCMTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCMTD__c</formula>
        <label>MSC MTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCMTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCMTD__c</formula>
        <label>MSC MTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCMTD__c</fullName>
        <label>MSC MTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSC__c</formula>
        <label>MSC Month-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSCPercentChange__c</fullName>
        <formula>IF (PriorProductPerformance__r.MSC__c &lt;&gt; 0, MSCChange__c / PriorProductPerformance__r.MSC__c/100, 0)</formula>
        <label>MSC Percent Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCPriorDay__c</fullName>
        <formula>PriorProductPerformance__r.MSC__c</formula>
        <label>MSC Prior Day</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSCQTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCQTD__c</formula>
        <label>MSC QTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCQTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCQTD__c</formula>
        <label>MSC QTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCQTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCQTD__c</formula>
        <label>MSC QTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCQTD__c</fullName>
        <label>MSC QTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSC__c</formula>
        <label>MSC Quarter-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSCYTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.MSCYTD__c</formula>
        <label>MSC YTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCYTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.MSCYTD__c</formula>
        <label>MSC YTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCYTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSCYTD__c</formula>
        <label>MSC YTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCYTD__c</fullName>
        <label>MSC YTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSCYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.MSC__c</formula>
        <label>MSC Year-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSC__c</fullName>
        <label>MSC</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthEndDate__c</fullName>
        <description>The Month End date associated with the row.  Used to simplify querying.</description>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank10Year__c</fullName>
        <label>Morningstar Absolute Rank 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank1Month__c</fullName>
        <label>Morningstar Absolute Rank 1 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank1Year__c</fullName>
        <label>Morningstar Absolute Rank 1 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank3Month__c</fullName>
        <label>Morningstar Absolute Rank 3 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank3Year__c</fullName>
        <label>Morningstar Absolute Rank 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRank6Month__c</fullName>
        <label>Morningstar Absolute Rank 6 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAbsoluteRankYTD__c</fullName>
        <label>Morningstar Absolute Rank YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarAnalystRating__c</fullName>
        <label>Morningstar Analyst Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MorningstarCategoryName__c</fullName>
        <label>Morningstar Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize10Year__c</fullName>
        <label>Morningstar Category Size 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize1Month__c</fullName>
        <label>Morningstar Category Size 1 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize1Year__c</fullName>
        <label>Morningstar Category Size 1 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize3Month__c</fullName>
        <label>Morningstar Category Size 3 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize3Year__c</fullName>
        <label>Morningstar Category Size 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySize6Month__c</fullName>
        <label>Morningstar Category Size 6 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarCategorySizeYTD__c</fullName>
        <label>Morningstar Category Size YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize10Year__c</fullName>
        <label>Morningstar Daily Category Size 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize1Day__c</fullName>
        <label>Morningstar Daily Category Size 1 Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize1Month__c</fullName>
        <label>Morningstar Daily Category Size 1 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize1Week__c</fullName>
        <label>Morningstar Daily Category Size 1 Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize1Year__c</fullName>
        <label>Morningstar Daily Category Size 1 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize3Month__c</fullName>
        <label>Morningstar Daily Category Size 3 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize3Year__c</fullName>
        <label>Morningstar Daily Category Size 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySize6Month__c</fullName>
        <label>Morningstar Daily Category Size 6 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySizeMTD__c</fullName>
        <label>Morningstar Daily Category Size MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySizeQTD__c</fullName>
        <label>Morningstar Daily Category Size QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyCategorySizeYTD__c</fullName>
        <label>Morningstar Daily Category Size YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank10Year__c</fullName>
        <label>Morningstar Daily Rank 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank1Day__c</fullName>
        <label>Morningstar Daily Rank 1 Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank1Month__c</fullName>
        <label>Morningstar Daily Rank 1 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank1Week__c</fullName>
        <label>Morningstar Daily Rank 1 Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank1Year__c</fullName>
        <label>Morningstar Daily Rank 1 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank3Month__c</fullName>
        <label>Morningstar Daily Rank 3 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank3Year__c</fullName>
        <label>Morningstar Daily Rank 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRank6Month__c</fullName>
        <label>Morningstar Daily Rank 6 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRankMTD__c</fullName>
        <label>Morningstar Daily Rank MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRankQTD__c</fullName>
        <label>Morningstar Daily Rank QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarDailyRankYTD__c</fullName>
        <label>Morningstar Daily Rank YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarMonthEndDate__c</fullName>
        <label>Morningstar Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MorningstarNumberOfFunds10Year__c</fullName>
        <label>Morningstar Number Of Funds 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarNumberOfFunds3Year__c</fullName>
        <label>Morningstar Number Of Funds 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarNumberOfFunds5Year__c</fullName>
        <label>Morningstar Number Of Funds 5 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarNumberOfFundsOverall__c</fullName>
        <label>Morningstar Number Of Funds Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MorningstarRank10Year__c</fullName>
        <label>Morningstar Rank 10 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRank1Month__c</fullName>
        <label>Morningstar Rank 1 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRank1Year__c</fullName>
        <label>Morningstar Rank 1 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRank3Month__c</fullName>
        <label>Morningstar Rank 3 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRank3Year__c</fullName>
        <label>Morningstar Rank 3 Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRank6Month__c</fullName>
        <label>Morningstar Rank 6 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRankYTD__c</fullName>
        <label>Morningstar Rank YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MorningstarRating10YearStars__c</fullName>
        <formula>IF(TEXT(MorningstarRating10Year__c)="5",IMAGE("/img/samples/stars_500.gif", "5 Stars"),
IF(TEXT(MorningstarRating10Year__c)="4",IMAGE("/img/samples/stars_400.gif", "4 Stars"),
IF(TEXT(MorningstarRating10Year__c)="3",IMAGE("/img/samples/stars_300.gif", "3 Stars"),
IF(TEXT(MorningstarRating10Year__c)="2",IMAGE("/img/samples/stars_200.gif", "2 Stars"),
IF(TEXT(MorningstarRating10Year__c)="1",IMAGE("/img/samples/stars_100.gif", "1 Star"),
IMAGE("/img/samples/stars_000.gif", "0 Stars"))))))</formula>
        <label>Morningstar Rating 10 Year (Stars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarRating10Year__c</fullName>
        <label>Morningstar Rating 10 Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MorningstarRating3YearStars__c</fullName>
        <formula>IF(TEXT(MorningstarRating3Year__c)="5",IMAGE("/img/samples/stars_500.gif", "5 Stars"),
IF(TEXT(MorningstarRating3Year__c)="4",IMAGE("/img/samples/stars_400.gif", "4 Stars"),
IF(TEXT(MorningstarRating3Year__c)="3",IMAGE("/img/samples/stars_300.gif", "3 Stars"),
IF(TEXT(MorningstarRating3Year__c)="2",IMAGE("/img/samples/stars_200.gif", "2 Stars"),
IF(TEXT(MorningstarRating3Year__c)="1",IMAGE("/img/samples/stars_100.gif", "1 Star"),
IMAGE("/img/samples/stars_000.gif", "0 Stars"))))))</formula>
        <label>Morningstar Rating 3 Year (Stars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarRating3Year__c</fullName>
        <label>Morningstar Rating 3 Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MorningstarRating5YearStars__c</fullName>
        <formula>IF(TEXT(MorningstarRating5Year__c)="5",IMAGE("/img/samples/stars_500.gif", "5 Stars"),
IF(TEXT(MorningstarRating5Year__c)="4",IMAGE("/img/samples/stars_400.gif", "4 Stars"),
IF(TEXT(MorningstarRating5Year__c)="3",IMAGE("/img/samples/stars_300.gif", "3 Stars"),
IF(TEXT(MorningstarRating5Year__c)="2",IMAGE("/img/samples/stars_200.gif", "2 Stars"),
IF(TEXT(MorningstarRating5Year__c)="1",IMAGE("/img/samples/stars_100.gif", "1 Star"),
IMAGE("/img/samples/stars_000.gif", "0 Stars"))))))</formula>
        <label>Morningstar Rating 5 Year (Stars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarRating5Year__c</fullName>
        <label>Morningstar Rating 5 Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MorningstarRatingDate__c</fullName>
        <label>Morningstar Rating Date</label>
        <type>Date</type>
    </fields>
</CustomObject>